# Raft

./: .gitignore  README.md
public-tests/: Cargo.toml
public-tests/tests/: basic_raft.rs  client_sessions.rs  cluster_membership_changes.rs  distributed_set.rs  snapshots.rs
solution/: Cargo.toml
solution/src/: domain.rs  lib.rs  raft.rs  utils.rs
test-utils/: Cargo.toml  distributed_set.rs  lib.rs
