[package]
name = "assignment-3-public-tests"
version = "0.2.0"
authors = ["Filip Plata <fp371335@students.mimuw.edu.pl>", "Wojciech Ciszewski <w.ciszewski2@student.uw.edu.pl>"]
edition = "2021"

[dev-dependencies]
uuid = { version = "0.8", features = ["v4", "serde"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
tokio = {version = "1.15", features = ["full"] }
async-channel = "1.6"
log = { version = "0.4" }
rand = "0.8"
ntest = "0.7"
executor = { path = "../../la1/solution", package = "assignment-1-solution" }
assignment-3-solution = { path = "../solution" }
assignment-3-test-utils = { path = "../test-utils" }
