[package]
name = "assignment-3-solution"
version = "0.2.0"
authors = ["Filip Plata <fp371335@students.mimuw.edu.pl>", "Wojciech Ciszewski <w.ciszewski2@student.uw.edu.pl>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4", "serde"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
tokio = { version = "1.15", features = ["full"] }
async-channel = "1.6"
log = "0.4"
rand = "0.8"
base64 = "0.13"
sha2 = "0.9"
executor = { path = "../../la1/solution", package = "assignment-1-solution" }

[lib]
name = "assignment_3_solution"
path = "src/lib.rs"
